Add contact service

--- a/src/app/modules/challenge/challenge.component.html
+++ b/src/app/modules/challenge/challenge.component.html
@@ -11,7 +11,7 @@
                 </span>
             </div>
             <div class="col-lg-4 col-md-4">
-                <button class="btn btn-lg btn-light v-center" (click)="showModal()">Contact Challenge Leader</button>
+                <button class="btn btn-lg btn-light v-center">Contact Challenge Leader</button>
             </div>
             <div class="col-lg-3 col-md-3">
                 <a class="btn btn-lg btn-light v-center full" href="#">Donate</a>
