--- a/src/app/modules/layout/components/header/header.component.html
+++ b/src/app/modules/layout/components/header/header.component.html
@@ -1,5 +1,5 @@
 <!-- Navigation -->
-<nav class="navbar navbar-dark bg-dark static-top">
+<nav class="navbar navbar-default navbar-dark bg-dark navbar-fixed-top">
     <div class="container">
         <a class="navbar-brand" [routerLink]="['/']">
             <img class="logo" src="../../../../../assets/img/logo-white.png" alt="F/CODIV">
