--- a/src/app/modules/layout/components/contact-team-modal/contact-team-modal.component.html
+++ b/src/app/modules/layout/components/contact-team-modal/contact-team-modal.component.html
@@ -1,4 +1,5 @@
-<div class="modal-header">
+<form [formGroup]="contactForm" (ngSubmit)="onSubmit()" novalidate>
+  <div class="modal-header">
     <button type="button" class="close pull-right" aria-label="Close" (click)="hideModal()">
       <span aria-hidden="true">&times;</span>
     </button>
@@ -7,85 +8,84 @@
     <h5 class="modal-title pull-left" id="my-modal-title">Advisors
     </h5>
     <h6><strong>Contact Information</strong></h6>
-    <form [formGroup]="contactForm" (ngSubmit)="onSubmit()" novalidate>
-        <div class="form-group">
-            <label for="exampleFormControlInput0">Full Name</label>
-            <input formControlName="fullname" type="text" class="form-control" id="exampleFormControlInput0">
-            <div *ngIf="contactForm.get('fullname').errors && contactForm.get('fullname').dirty || contactForm.get('fullname').touched" class="error">
-              <p *ngIf="contactForm.get('fullname').hasError('required')">Field is requiered</p>
-            </div>
+    <div class="form-group">
+        <label for="exampleFormControlInput0">Full Name</label>
+        <input formControlName="fullname" type="text" class="form-control" id="exampleFormControlInput0">
+        <div *ngIf="contactForm.get('fullname').errors && contactForm.get('fullname').dirty || contactForm.get('fullname').touched" class="error">
+          <p *ngIf="contactForm.get('fullname').hasError('required')">Field is requiered</p>
         </div>
-        <div class="form-group">
-            <label for="exampleFormControlInput1">Email</label>
-            <input formControlName="email" type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
-            <div *ngIf="contactForm.get('email').errors && contactForm.get('email').dirty || contactForm.get('email').touched" class="error">
-              <p *ngIf="contactForm.get('email').hasError('required')">Field is requiered</p>
-              <p *ngIf="contactForm.get('email').hasError('email')">Invalid format email</p>
-            </div>
+    </div>
+    <div class="form-group">
+        <label for="exampleFormControlInput1">Email</label>
+        <input formControlName="email" type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+        <div *ngIf="contactForm.get('email').errors && contactForm.get('email').dirty || contactForm.get('email').touched" class="error">
+          <p *ngIf="contactForm.get('email').hasError('required')">Field is requiered</p>
+          <p *ngIf="contactForm.get('email').hasError('email')">Invalid format email</p>
         </div>
-        <div class="form-group">
-            <label for="exampleFormControlInput0">Country</label>
-            <input formControlName="country" type="text" class="form-control" id="exampleFormControlInput0">
-            <div *ngIf="contactForm.get('country').errors && contactForm.get('country').dirty || contactForm.get('country').touched" class="error">
-              <p *ngIf="contactForm.get('country').hasError('required')">Field is requiered</p>
-            </div>
+    </div>
+    <div class="form-group">
+        <label for="exampleFormControlInput0">Country</label>
+        <input formControlName="country" type="text" class="form-control" id="exampleFormControlInput0">
+        <div *ngIf="contactForm.get('country').errors && contactForm.get('country').dirty || contactForm.get('country').touched" class="error">
+          <p *ngIf="contactForm.get('country').hasError('required')">Field is requiered</p>
         </div>
-        <div class="form-group">
-          <label for="exampleFormControlInput1">Phone</label>
-          <input formControlName="phone" type="text" class="form-control" id="exampleFormControlInput1">
-          <div *ngIf="contactForm.get('phone').errors && contactForm.get('phone').dirty && contactForm.get('phone').touched" class="error">
-            <p *ngIf="contactForm.get('phone').hasError('required')">Field is requiered</p>
-          </div>
+    </div>
+    <div class="form-group">
+      <label for="exampleFormControlInput1">Phone</label>
+      <input formControlName="phone" type="text" class="form-control" id="exampleFormControlInput1">
+      <div *ngIf="contactForm.get('phone').errors && contactForm.get('phone').dirty || contactForm.get('phone').touched" class="error">
+        <p *ngIf="contactForm.get('phone').hasError('required')">Field is requiered</p>
+      </div>
+    </div>
+    <div class="form-group">
+        <label for="exampleFormControlSelect1">What is the best way to contact you?</label>
+        <div class="form-check">
+          <label class="form-check-label">
+            <input formControlName="bestContact" (click)="best = ''" type="radio" class="form-check-input" value="Email" name="bestContact">Email
+          </label>
         </div>
-        <div class="form-group">
-            <label for="exampleFormControlSelect1">What is the best way to contact you?</label>
-            <div class="form-check">
-              <label class="form-check-label">
-                <input formControlName="bestContact" (click)="best = ''" type="radio" class="form-check-input" value="Email" name="bestContact">Email
-              </label>
-            </div>
-            <div class="form-check">
-              <label class="form-check-label">
-                <input formControlName="bestContact" (click)="best = ''" type="radio" class="form-check-input" value="Phone" name="bestContact">Phone
-              </label>
-            </div>
-            <div class="form-check">
-                <label class="form-check-label other">
-                  <input formControlName="bestContact" (click)="best = 'Other'" type="radio" class="form-check-input" value="Other" name="bestContact">Other
-                  <input *ngIf="best === 'Other'" type="text" class="form-control space" placeholder="write" formControlName="bestContact">
-                </label>
-            </div>
-            <div *ngIf="contactForm.get('bestContact').errors && contactForm.get('bestContact').dirty || contactForm.get('bestContact').touched" class="error">
-              <p *ngIf="contactForm.get('bestContact').hasError('required')">Field is requiered</p>
-            </div>
+        <div class="form-check">
+          <label class="form-check-label">
+            <input formControlName="bestContact" (click)="best = ''" type="radio" class="form-check-input" value="Phone" name="bestContact">Phone
+          </label>
         </div>
-        <div class="form-group">
-            <label for="exampleFormControlInput0">Profession (Optional)</label>
-            <input formControlName="profession" type="text" class="form-control" id="exampleFormControlInput0">
-            <div *ngIf="contactForm.get('profession').errors && contactForm.get('profession').dirty && contactForm.get('profession').touched" class="error">
-              <p *ngIf="contactForm.get('profession').hasError('required')">Field is requiered</p>
-            </div>
-          </div>
-        <div class="form-group">
-            <label for="exampleFormControlInput0">Area(s) of Expertise</label>
-            <input formControlName="areas" type="text" class="form-control" id="exampleFormControlInput0">
-            <div *ngIf="contactForm.get('areas').errors && contactForm.get('areas').dirty && contactForm.get('areas').touched" class="error">
-                <p *ngIf="contactForm.get('areas').hasError('required')">Field is requiered</p>
-            </div>
+        <div class="form-check">
+            <label class="form-check-label other">
+              <input formControlName="bestContact" (click)="best = 'Other'" type="radio" class="form-check-input" value="Other" name="bestContact">Other
+              <input *ngIf="best === 'Other'" type="text" class="form-control space" placeholder="write" formControlName="bestContact">
+            </label>
         </div>
-          <div class="form-group">
-            <label for="exampleFormControlInput0">How would you like to assist F/COVID?</label>
-            <input formControlName="howWould" type="text" class="form-control" id="exampleFormControlInput0">
-            <div *ngIf="contactForm.get('howWould').errors && contactForm.get('howWould').dirty && contactForm.get('howWould').touched" class="error">
-              <p *ngIf="contactForm.get('howWould').hasError('required')">Field is requiered</p>
-            </div>
+        <div *ngIf="contactForm.get('bestContact').errors && contactForm.get('bestContact').dirty || contactForm.get('bestContact').touched" class="error">
+          <p *ngIf="contactForm.get('bestContact').hasError('required')">Field is requiered</p>
         </div>
-        <p>Thank you for your interest in supporting those on the front lines of the
-            COVID-19 battle. We will be in touch as soon as possible. In the
-            meantime, if you have any questions, please contact us at (fcovid@hf.cx),
-            the F/COVID Team.  </p>
-    </form>
+    </div>
+    <div class="form-group">
+        <label for="exampleFormControlInput0">Profession (Optional)</label>
+        <input formControlName="profession" type="text" class="form-control" id="exampleFormControlInput0">
+        <div *ngIf="contactForm.get('profession').errors && contactForm.get('profession').dirty || contactForm.get('profession').touched" class="error">
+          <p *ngIf="contactForm.get('profession').hasError('required')">Field is requiered</p>
+        </div>
+      </div>
+    <div class="form-group">
+        <label for="exampleFormControlInput0">Area(s) of Expertise</label>
+        <input formControlName="areas" type="text" class="form-control" id="exampleFormControlInput0">
+        <div *ngIf="contactForm.get('areas').errors && contactForm.get('areas').dirty || contactForm.get('areas').touched" class="error">
+            <p *ngIf="contactForm.get('areas').hasError('required')">Field is requiered</p>
+        </div>
+    </div>
+      <div class="form-group">
+        <label for="exampleFormControlInput0">How would you like to assist F/COVID?</label>
+        <input formControlName="howWould" type="text" class="form-control" id="exampleFormControlInput0">
+        <div *ngIf="contactForm.get('howWould').errors && contactForm.get('howWould').dirty || contactForm.get('howWould').touched" class="error">
+          <p *ngIf="contactForm.get('howWould').hasError('required')">Field is requiered</p>
+        </div>
+    </div>
+    <p>Thank you for your interest in supporting those on the front lines of the
+        COVID-19 battle. We will be in touch as soon as possible. In the
+        meantime, if you have any questions, please contact us at (fcovid@hf.cx),
+        the F/COVID Team.  </p>
   </div>
   <div class="modal-footer">
     <button class="btn btn-primary" type="submit" [disabled]="contactForm.invalid">Submit</button>
   </div>
+</form>
