--- a/src/app/modules/landing/landing.component.scss
+++ b/src/app/modules/landing/landing.component.scss
@@ -93,7 +93,7 @@
 
             @media (max-width: 480px) {
                 p {
-                    padding: 0;
+                    padding: 0 !important;
                 }
             }
         }
