--- a/src/app/modules/challenge/challenge.component.html
+++ b/src/app/modules/challenge/challenge.component.html
@@ -1,6 +1,6 @@
 <header class="text-dark text-lg-right text-center" class="header"
     [ngStyle]="{'background-image': 'url('+(challenge | async).home_background+')'}">
-    <img [src]="(challenge | async).image" class="banner m-auto">
+    <img [src]="(challenge | async).image" class="banner m-auto img-fluid">
 </header>
 <section class="bg-dark">
     <div class="container bg-dark text-center text-white p-5">
