Change URL and activated scroll

--- a/src/app/modules/landing/landing.component.html
+++ b/src/app/modules/landing/landing.component.html
@@ -19,12 +19,12 @@
             fight COVID-19 worldwide.
         </p>
         <div class="button-section d-flex flex-column flex-lg-row justify-content-around mt-5">
-            <a pageScroll class="btn btn-lg btn-light v-center mb-2" [routerLink]="['/home']"
+            <a pageScroll class="btn btn-lg btn-light v-center mb-2" [routerLink]="['/']"
                 fragment="feed-the-heroes">Feed the Heroes</a>
-            <a pageScroll class="btn btn-lg btn-light mb-2" [routerLink]="['/home']"
+            <a pageScroll class="btn btn-lg btn-light mb-2" [routerLink]="['/']"
                 fragment="healthcare-system-data">Healthcare
                 System Data</a>
-            <a pageScroll class="btn btn-lg btn-light v-center mb-2" [routerLink]="['/home']"
+            <a pageScroll class="btn btn-lg btn-light v-center mb-2" [routerLink]="['/']"
                 fragment="covent-19">CoVent-19 Challenge</a>
         </div>
     </div>
