--- a/src/app/modules/layout/components/header/header.component.html
+++ b/src/app/modules/layout/components/header/header.component.html
@@ -5,7 +5,7 @@
             <img class="logo" src="../../../../../assets/img/logo-white.png" alt="F/CODIV">
         </a>
         <div class="m-0 p-0 d-none d-md-block">
-            <a pageScroll class="d-none d-md-inline-block text-light mr-5" [routerLink]="['/home']"
+            <a pageScroll class="d-none d-md-inline-block text-light mr-5" [routerLink]="['/']"
                 fragment="general-description"> About Us </a>
             <div class="dropdown mr-5">
                 <button class="dropbtn">Challenges</button>
