ajustando el comportamiento responsive dle header

--- a/src/app/modules/layout/components/header/header.component.html
+++ b/src/app/modules/layout/components/header/header.component.html
@@ -1,10 +1,10 @@
 <!-- Navigation -->
 <nav class="navbar navbar-dark bg-dark static-top">
-    <div class="container-lg container-fluid">
+    <div class="container-md container-fluid">
         <a class="navbar-brand flex-fill" [routerLink]="['/']">
             <img class="logo" src="../../../../../assets/img/logo-white.png" alt="F/CODIV">
         </a>
-        <div class="m-0 p-0 d-none d-lg-block">
+        <div class="m-0 p-0 d-none d-md-block">
             <a pageScroll class="d-none d-md-inline-block text-light mr-5" [routerLink]="['/']"
                 fragment="general-description"> About Us </a>
             <div class="dropdown mr-5">
@@ -18,7 +18,7 @@
             <!-- <a class="btn btn-light d-none d-md-inline-block mx-3" (click)="showModal()">I want to participate</a> -->
             <a class="btn btn-light space" href="https://startuppolicylab.wedid.it/" target="_blank">Donate</a>
         </div>
-        <div class="btn-group d-block d-lg-none">
+        <div class="btn-group d-block d-md-none">
             <button type="button" class="btn bg-transparent border-0 text-light btn-menu-mobile"
                 (click)="showMenu = !showMenu">
                 <i class="fa fa-bars" [ngClass]="{'fa-bars': !showMenu, 'fa-times': showMenu}"></i>
